k8s/c1/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: online-boutique
  labels:
    app.kubernetes.io/part-of: online-boutique
    cluster: obs-challenge-c1
